# folder-scanner

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs
src/context_menu/: AGENTS.md  linux.rs  macos.rs  mod.rs  windows.rs
src/platform/: mod.rs
src/report/: html.rs  json.rs  mod.rs  terminal.rs
src/scanner/: AGENTS.md  clamav.rs  defender.rs  mod.rs  trivy.rs  yara.rs
src/updater/: download.rs  mod.rs
templates/: report.html
