[package]
name = "folder-scanner"
version = "0.1.0"
edition = "2021"
description = "Cross-platform security scanner with file manager context menu integration"
license = "MIT"
repository = "https://github.com/dewdad/folder-scanner"

[[bin]]
name = "folder-scanner"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

# Async + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "process", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# Self-update
self_update = { version = "0.41", features = [
    "archive-tar", "compression-flate2",
    "archive-zip", "compression-zip-deflate",
    "rustls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Progress + Output
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"
comfy-table = "7"

# Platform utils
dirs = "5"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
open = "5"

# Reports
minijinja = "2"

# Semver
semver = "1"

# Async trait
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[build-dependencies]

# ── Packaging metadata ─────────────────────────────────────────────────────────

[package.metadata.deb]
maintainer = "dewdad"
section = "utils"
priority = "optional"
extended-description = """\
Scans files and folders for vulnerabilities, malware, and suspicious patterns \
using Trivy, ClamAV, YARA rules, and Windows Defender in parallel. \
Integrates with your file manager's right-click context menu."""
assets = [
    ["target/release/folder-scanner", "usr/bin/", "755"],
]

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false

[profile.release]
strip = true
lto = true
codegen-units = 1
